--- a/LearnSelenium/pom.xml
+++ b/LearnSelenium/pom.xml
@@ -1,13 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.testleaf</groupId>
-  <artifactId>LearnSelenium</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
+<modelVersion>4.0.0</modelVersion>
+<groupId>org.testleaf</groupId>
+<artifactId>LearnSelenium</artifactId>
+<version>0.0.1-SNAPSHOT</version>
+<dependencies>
 <dependency>
-    <groupId>org.seleniumhq.selenium</groupId>
-    <artifactId>selenium-java</artifactId>
-    <version>4.13.0</version>
+<groupId>org.seleniumhq.selenium</groupId>
+<artifactId>selenium-java</artifactId>
+<version>4.13.0</version>
 </dependency>
- </dependencies>
-  </project>
+<dependency>   
+<groupId>io.github.sukgu</groupId>   
+<artifactId>automation</artifactId>   
+<version>0.1.4.1</version> 
+</dependency>
+
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>6.14.3</version>
+</dependency>
+</dependencies>
+</project>
